--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://desa-temboro.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=temboro
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u732389219_temboro
+DB_USERNAME=u732389219_temboro
+DB_PASSWORD=4dm1nT3mb0r0
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
